[package]
name = "stealth-gas-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.2.1", features = [
    "providers",
    "network",
    "sol-types",
    "rpc-types",
    "contract",
    "provider-ws",
    "provider-http",
] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
postgres = "0.17.2"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio"] }
futures = "0.3"
futures-util = "0.3"
anyhow = "1.0"  
reqwest = "0.11"