[package]
name = "stealth-gas-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.9.2", features = ["full"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
postgres = "0.17.2"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio", "runtime-tokio-native-tls", "time", "chrono"] }
futures = "0.3"
futures-util = "0.3"
anyhow = "1.0"  
reqwest = "0.11"
blind-rsa-signatures = "0.15.1"
rand = "0.8"
sha2 = "0.10.8"
base64 = "0.22"
hex = "0.4"
rocket = { version = "0.5.0-rc.3", features = ["json"] }
eth-stealth-gas-tickets = "0.3.0"